[workspace]
members = ["aetos-core", "aetos-macro", "aetos"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["David"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/DavidVentura/aetos"
documentation = "https://docs.rs/aetos"
homepage = "https://github.com/DavidVentura/aetos"
rust-version = "1.85.0"

[workspace.dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[workspace.lints.clippy]
collapsible_if = "allow"
