[package]
name = "aetos-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Core rendering types and traits for the aetos metrics library"

[features]
# Disables label value escaping for maximum performance.
# WARNING: Using this feature with labels containing ", \, or newlines
# will produce invalid Prometheus output.
no-escaping = []

[dependencies]
