[package]
name = "aetos-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Procedural macros for the aetos metrics library"

[lints]
workspace = true

[lib]
proc-macro = true

[features]
no-escaping = ["aetos-core/no-escaping"]

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
aetos-core = { version = "0.1.0", path = "../aetos-core" }

[dev-dependencies]
aetos-core = { version = "0.1.0", path = "../aetos-core" }
