[package]
name = "aetos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "A Rust proc macro library for generating Prometheus metrics rendering code from annotated structs"
keywords = ["prometheus", "metrics"]

[features]
# Disables label value escaping for maximum performance.
# Using this feature with labels containing ", \, or newlines
# will produce invalid Prometheus output.
no-escaping = ["aetos-core/no-escaping", "aetos-macro/no-escaping"]

[dependencies]
aetos-core = { version = "0.1.0", path = "../aetos-core" }
aetos-macro = { version = "0.1.0", path = "../aetos-macro" }
